# ChangeLog for dev-python/restview
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  14 Jul 2010; James Rowe <jnrowe@gmail.com> restview-1.1.3.ebuild:
  Support multiple python versions.

  21 Mar 2010; James Rowe <jnrowe@gmail.com> restview-1.1.3.ebuild:
  Added PYTHON_DEPEND setting.

  06 Dec 2009; James Rowe <jnrowe@gmail.com> -restview-1.1.2.ebuild,
  restview-1.1.3.ebuild:
  Keyworded x86.

  06 Dec 2009; James Rowe <jnrowe@gmail.com> restview-1.1.3.ebuild:
  Keyworded amd64.

  18 Nov 2009; James Rowe <jnrowe@gmail.com> restview-1.1.2.ebuild:
  Keyworded amd64.

  12 Nov 2009; James Rowe <jnrowe@gmail.com> restview-1.1.1.ebuild,
  restview-1.1.2.ebuild, restview-1.1.3.ebuild:
  Switched to EAPI 2.

*restview-1.1.3 (06 Nov 2009)

  06 Nov 2009; James Rowe <jnrowe@gmail.com> +restview-1.1.3.ebuild:
  Version bump [23f].

  30 Oct 2009; James Rowe <jnrowe@gmail.com> restview-1.1.1.ebuild:
  Keyworded x86.

  29 Oct 2009; James Rowe <jnrowe@gmail.com> restview-1.1.1.ebuild:
  Keyworded amd64.

*restview-1.1.2 (19 Oct 2009)

  19 Oct 2009; James Rowe <jnrowe@gmail.com> +restview-1.1.2.ebuild:
  Version bump [cf3].

  18 Oct 2009; James Rowe <jnrowe@gmail.com> restview-1.1.1.ebuild:
  Converted script to use module_script_wrapper.

  14 Oct 2009; James Rowe <jnrowe@gmail.com> restview-1.1.1.ebuild:
  Switch to using jnrowe-pypi eclass.

  30 Sep 2009; James Rowe <jnrowe@gmail.com> restview-1.1.1.ebuild:
  Keyworded ~x86.

*restview-1.1.1 (29 Sep 2009)

  29 Sep 2009; James Rowe <jnrowe@gmail.com> +restview-1.1.1.ebuild,
  +metadata.xml:
  Initial ebuild, by me.
