@@ -2,13 +2,15 @@
 Hash: SHA1
 
 DIST restview-1.1.3.tar.gz 7181 RMD160 7f6f03faf351feb6271a77a17e7cf9571185bad3 SHA1 6220154d10ff5909ad74fe0b8e91b90e6b7540fc SHA256 de60ba194cd48091c6ab16c9a0f6c375caa5ae3bc2785460d256efced66efde9
+DIST restview-1.2.tar.gz 9296 RMD160 ed61d8810eb45f35c3cb6246ba71136b607efa9b SHA1 81aad5e46284a6b569c963ccf2106de2c94def2c SHA256 be28b13fb31af5a27d8a45ce52d796d0de7e160479712a5cb81e46628610a453
 EBUILD restview-1.1.3.ebuild 571 RMD160 7568346b5b678bb9e69bccb5845578755b34c8cd SHA1 f5a0341ffd0df82f751a55dd5c580190709357be SHA256 3e08bd97cebe9fc9e16e1b710d8acf8d3c37e4f196c7957b30b6c41560f64d25
-MISC ChangeLog 1627 RMD160 659428708d7e685bcb7f150b05763bd361f9ad08 SHA1 1568afe99fbe9d1048243b6075800e1381698d5e SHA256 870150d667e910f40646f178f85a124f4d8603610580e7deb0973c01c92f6323
+EBUILD restview-1.2.ebuild 684 RMD160 4333bbf69317235e6d86b8dd7133a87fe49a2c82 SHA1 6ea1ed9f685e172945321c08de5de83e0631bcae SHA256 59a8d4b40f11f85fc6d4f8a98e759de75a822bcc394aeab694658d96db43855c
+MISC ChangeLog 1746 RMD160 bfd353ed8bdb84de1708f373c42fac438e4b5b93 SHA1 bd6bad26ba72c3ff919906c8e61f8a25a3b34e98 SHA256 49bf468801df66a2342218743a08be8fd0871a7cfb519985b120cc23ff9201a2
 MISC metadata.xml 985 RMD160 5cedae084f9788bf886f35b0b7f0a4c8922abebc SHA1 c1cb878cfc4c6a86253cc07d12deafb2713998a9 SHA256 f401362a5a2e04e844efe2241ff30212ac5158909c32eadb3a7d29d79f199278
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.15 (GNU/Linux)
 
-iEYEARECAAYFAkw9j6oACgkQzJrj3cAXR0kMdwCeIhCScaKQxtS0V9EU8B3O0CbE
-W6QAnjhrdMFDF6ifvR2OxPcUn3eCMzdt
-=zWgn
+iEYEARECAAYFAkxhiB4ACgkQzJrj3cAXR0lGWACdE4ol3qwnAAcwZq9Y2T0nbFmS
+qJoAn3kTr/3Uara3WsgRj9eeFuo9SmHL
+=5Jvo
 -----END PGP SIGNATURE-----
