@@ -2,6 +2,11 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*restview-1.2 (10 Aug 2010)
+
+  10 Aug 2010; James Rowe <jnrowe@gmail.com> +restview-1.2.ebuild:
+  Version bump [884].
+
   14 Jul 2010; James Rowe <jnrowe@gmail.com> restview-1.1.3.ebuild:
   Support multiple python versions.
 
